# Asr-1.7B

./: .env.example  README.md  TODO.md  asr.md  client.java  main.py  pyproject.toml  ten-vad.md  vad-design.md  vad.md  测试结果.txt
models/itn/: itn_wrapper.py
models/vad/: fsmn_vad_wrapper.py  silero_vad_wrapper.py  ten_vad_wrapper.py
models/vad/silero-vad-onnx/: .msc  .mv  README.md  configuration.json  vad.yaml
models/vad/speech_fsmn_vad_zh-cn-16k-common-pytorch/: .msc
models/vad/ten-vad/: .gitignore
models/vad/ten-vad/examples/: CMakeLists.txt  TestTenVad.java  test_node.js
models/vad/ten-vad/examples/go-tenvad/: main.go  vad.go
models/vad/ten-vad/examples_onnx/: CMakeLists.txt  build-and-deploy-macos.sh
models/vad/ten-vad/examples_onnx/python/: CMakeLists.txt  build-and-deploy-linux.sh  ten_vad_demo.py
models/vad/ten-vad/include/: TenVad.java
models/vad/ten-vad/lib/Web/: README.md
script/: test.py
src/api/: connection_manager.py  health.py  metrics.py  session.py  websocket.py
src/core/: config.py  logging.py
src/models/: schemas.py
src/services/: asr_service.py  itn_pool.py  itn_service.py  vad_pool.py  vad_service.py
src/utils/: audio.py
test/: asr_latency_profile.py  test_itn_concurrency.py  test_itn_mem.py  test_shared_vad_single_instance_experiment.py  test_vad_design_pool_queue_experiment.py  test_vad_itn_performance.py  test_vad_shared_instance.py  ws_stress_test.py
test/model_test/: test_models.py
test/pipeline/: asr_pipeline.py  asr_pipeline_fsmn.py  asr_pipeline_silero.py  asr_pipeline_tenvad.py  pipeline_common.py  test_asr_pipeline.py  test_asr_pipeline_fsmn.py  test_asr_pipeline_silero.py  test_asr_pipeline_tenvad.py
test/vad/: benchmark_vad.py
vad-test/: benchmark_vad.py  concurrent_silero_test.py  dynamic_batch_bottleneck_test.py  silero_concurrent_results.txt
vad-test/ten-vad/: README.md
vad-test/ten-vad/examples/: plot_pr_curves.py  sample_array.js  test_browser.html
vad-test/ten-vad/examples/go-tenvad/: go.mod
vad-test/ten-vad/examples_onnx/: build-and-deploy-linux.sh
vad-test/ten-vad/examples_onnx/python/: build-and-deploy-macos.sh  ten_vad_python.cc
